// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test editor's actions Match task.convert.script snapshot 1`] = `
<DocumentFragment>
  <pre>
    {"id":"task.convert.script","name":"转换为脚本","title":"转换为脚本","place":"outer"}
  </pre>
  <span
    aria-label="swap"
    class="anticon anticon-swap"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="swap"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M847.9 592H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h605.2L612.9 851c-4.1 5.2-.4 13 6.3 13h72.5c4.9 0 9.5-2.2 12.6-6.1l168.8-214.1c16.5-21 1.6-51.8-25.2-51.8zM872 356H266.8l144.3-183c4.1-5.2.4-13-6.3-13h-72.5c-4.9 0-9.5 2.2-12.6 6.1L150.9 380.2c-16.5 21-1.6 51.8 25.1 51.8h696c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Test editor's actions Match task.format snapshot 1`] = `
<DocumentFragment>
  <pre>
    {"id":"task.format","name":"格式化","title":"格式化","place":"outer"}
  </pre>
  <span
    aria-label="format-painter"
    class="anticon anticon-format-painter"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="format-painter"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <defs>
        <style />
      </defs>
      <path
        d="M840 192h-56v-72c0-13.3-10.7-24-24-24H168c-13.3 0-24 10.7-24 24v272c0 13.3 10.7 24 24 24h592c13.3 0 24-10.7 24-24V256h32v200H465c-22.1 0-40 17.9-40 40v136h-44c-4.4 0-8 3.6-8 8v228c0 .6.1 1.3.2 1.9A83.99 83.99 0 00457 960c46.4 0 84-37.6 84-84 0-2.1-.1-4.1-.2-6.1.1-.6.2-1.2.2-1.9V640c0-4.4-3.6-8-8-8h-44V520h351c22.1 0 40-17.9 40-40V232c0-22.1-17.9-40-40-40zM720 352H208V160h512v192zM477 876c0 11-9 20-20 20s-20-9-20-20V696h40v180z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Test editor's actions Match task.run snapshot 1`] = `
Object {
  "disabled": false,
  "icon": "play",
  "id": "task.run",
  "name": "Run Task",
  "place": "outer",
  "title": "运行",
}
`;

exports[`Test editor's actions Match task.run snapshot 2`] = `
Object {
  "disabled": true,
  "icon": "loading~spin",
  "id": "task.run",
  "name": "Running",
  "title": "运行中",
}
`;

exports[`Test editor's actions Match task.save snapshot 1`] = `
Object {
  "icon": "save",
  "id": "task.save",
  "name": "Save Task",
  "place": "outer",
  "title": "保存",
}
`;

exports[`Test editor's actions Match task.stop snapshot 1`] = `
Object {
  "disabled": true,
  "icon": "debug-pause",
  "id": "task.stop",
  "name": "Stop Task",
  "place": "outer",
  "title": "停止运行",
}
`;

exports[`Test editor's actions Match task.submit snapshot 1`] = `
<DocumentFragment>
  <pre>
    {"id":"task.submit","name":"提交至调度","title":"提交至调度","place":"outer"}
  </pre>
  <span
    aria-label="upload"
    class="anticon anticon-upload"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="upload"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Test editor's actions Match task.syntax snapshot 1`] = `
<DocumentFragment>
  <pre>
    {"id":"task.syntax","name":"语法检查","title":"语法检查","place":"outer"}
  </pre>
  <span
    style="font-size: 0px;"
    title="语法检查"
  >
    <svg
      class="icon"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M259.413 677.376l46.08-126.976h212.224l46.08 127.019h88.747L458.837 170.667h-94.464L170.667 677.376h88.746zm233.472-195.157h-162.56l80.214-222.123h2.858l79.488 222.123z"
        fill="currentColor"
      />
      <path
        d="M831.019 588.203a32 32 0 0145.226 45.013l-3.328 3.413L578.22 891.563a32 32 0 01-41.43.384l-3.37-3.286-105.515-118.016a32 32 0 0144.288-45.952l3.413 3.286 84.523 94.549 270.933-234.325z"
        fill="currentColor"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Test editor's actions Match task_ops snapshot 1`] = `
<DocumentFragment>
  <pre>
    {"id":"task_ops","name":"运维","title":"运维","place":"outer"}
  </pre>
  <span
    aria-label="login"
    class="anticon anticon-login"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="login"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <defs>
        <style />
      </defs>
      <path
        d="M521.7 82c-152.5-.4-286.7 78.5-363.4 197.7-3.4 5.3.4 12.3 6.7 12.3h70.3c4.8 0 9.3-2.1 12.3-5.8 7-8.5 14.5-16.7 22.4-24.5 32.6-32.5 70.5-58.1 112.7-75.9 43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 32.6 32.5 58.1 70.4 76 112.5C865.7 417.8 875 464.1 875 512c0 47.9-9.4 94.2-27.8 137.8-17.8 42.1-43.4 80-76 112.5s-70.5 58.1-112.7 75.9A352.8 352.8 0 01520.6 866c-47.9 0-94.3-9.4-137.9-27.8A353.84 353.84 0 01270 762.3c-7.9-7.9-15.3-16.1-22.4-24.5-3-3.7-7.6-5.8-12.3-5.8H165c-6.3 0-10.2 7-6.7 12.3C234.9 863.2 368.5 942 520.6 942c236.2 0 428-190.1 430.4-425.6C953.4 277.1 761.3 82.6 521.7 82zM395.02 624v-76h-314c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h314v-76c0-6.7 7.8-10.5 13-6.3l141.9 112a8 8 0 010 12.6l-141.9 112c-5.2 4.1-13 .4-13-6.3z"
      />
    </svg>
  </span>
</DocumentFragment>
`;
